plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.11'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'org.flywaydb.flyway' version '8.5.13'

}

flyway {
	url = 'jdbc:mysql://localhost:3306/management-db'
	user = 'root'
	password = 'teste123@'
	locations = ['classpath:db/migration']
}

group = 'com.netceed.management'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.17.2'
	// https://mvnrepository.com/artifact/org.flywaydb/flyway-core
	implementation 'org.flywaydb:flyway-core:8.5.13'
	// https://mvnrepository.com/artifact/org.flywaydb/flyway-mysql
	implementation 'org.flywaydb:flyway-mysql:8.5.13'

	testImplementation 'junit:junit:4.13.1'
	testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.26.3'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	compileOnly 'org.projectlombok:lombok'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'com.h2database:h2'

	annotationProcessor 'org.projectlombok:lombok'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testRuntimeOnly 'io.swagger.core.v3:swagger-annotations:2.2.20'
}

tasks.named('test') {
	useJUnitPlatform()
}
